--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://anodeus.github.io/todos",
+  "homepage": ".",
   "name": "myapps",
   "version": "0.1.0",
   "private": true,
